--- a/ca_v1/src/main/resources/templates/template.html
+++ b/ca_v1/src/main/resources/templates/template.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<title>Index Page</title>
 </head>
 <body>
 
+<header th:insert="layout/layout.html :: header"></header>
+<div th:replace="layout/layout.html :: menu"></div>
+<h1>Home/Landing/Index Page</h1>
+<p>Blah Blah Blah</p>
+
+<div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
