--- a/ca_v1/src/main/resources/templates/index.html
+++ b/ca_v1/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
 <meta charset="ISO-8859-1">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="../../static/css/site.css">
 <title>Index Page</title>
 </head>
 <body>
