--- a/ca_v1/src/main/resources/templates/userList.html
+++ b/ca_v1/src/main/resources/templates/userList.html
@@ -4,15 +4,37 @@
 <meta charset="ISO-8859-1">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="../static/css/site.css">
 <title>Index Page</title>
 </head>
 <body>
 
-<header th:insert="layout/layout.html :: header"></header>
-<div th:replace="layout/layout.html :: menu"></div>
-<h1>Home/Landing/Index Page</h1>
-<p>Blah Blah Blah</p>
+	<header th:insert="layout/layout.html :: header"></header>
+	<div th:replace="layout/layout.html :: menu"></div>
 
-<div th:replace="layout/layout.html :: footer"></div>
+	<h2 th:if="${not #lists.isEmpty(users)}">Users List</h2>
+	<table th:if="${not #lists.isEmpty(users)}">
+		<tr>
+			<th>Id</th>
+			<th>Name</th>
+			<th>Username</th>
+			<th>Role</th>
+<!-- 			<th>Delete Facility</th>
+			<th>Delete Facility</th> -->
+		</tr>
+		<tr th:each="user:${users}">
+			<td th:text=${user.Id}>Id</td>
+			<td th:text=${user.name}>Name</td>
+			<td th:text=${user.username}>Username</td>
+			<td th:text=${user.role}>Role</td>
+			<!-- 			<td><a href="EditFacility.html"
+				th:href="@{/facility/edit/}+${facility.facilityId}">Edit</a></td>
+			<td><a href="DeleteFacility.html"
+				th:href="@{/facility/delete/}+${facility.facilityId}">Delete</a></td> -->
+		</tr>
+	</table>
+
+	<div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
