--- a/ca_v1/src/main/resources/templates/template.html
+++ b/ca_v1/src/main/resources/templates/template.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -6,7 +5,7 @@
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet"
-	href="../../static/css/site.css">
+	href="../static/css/site.css">
 <title>Index Page</title>
 </head>
 <body>
