--- a/ca_v1/src/main/resources/templates/users.html
+++ b/ca_v1/src/main/resources/templates/users.html
@@ -16,6 +16,7 @@
 	<a href="userform.html" th:href="@{/user/adduser}">Add User</a>
 
 	<h2 th:if="${not #lists.isEmpty(users)}">User List</h2>
+	<div>
 	<table th:if="${not #lists.isEmpty(users)}">
 		<tr >
 			<th >ID</th>
@@ -37,7 +38,41 @@
 
 
 	</table>
-	</br>
+	</div>
+	<div>&nbsp;</div>
+	<br/>
+	<div>
+	     Total Items:[[${total}]] - Page[[${currentPage}]] of [[${totalPages}]]
+	     &nbsp; -&nbsp;
+	     
+	     <a th:if="${currentPage >1}" th:href="@{/user/page/1}"> First</a>
+	     <span th:unless="${currentPage >1}"> First</span>
+	     &nbsp;&nbsp;
+	     
+	     <a th:if="${currentPage >1}" th:href="@{'/user/page/' + ${currentPage - 1}}"> Previous</a>
+	     <span th:unless="${currentPage >1}"> Previous</span>
+	     &nbsp;&nbsp;
+	     
+	     <span th:each="i: ${#numbers.sequence(1,totalPages)}">
+	       <a th:if="${i != currentPage}" th:href="@{'/user/page/'} + ${i}">[[${i}]]</a> 
+	       <span th:unless="${i != currentPage}" >[[${i}]]</span> 
+	       &nbsp;&nbsp;
+	     </span>
+	     
+	     <a th:if="${currentPage <totalPages}" th:href="@{'/user/page/' + ${currentPage + 1}}"> Next</a>
+	     <span th:unless="${currentPage <totalPages}"> Next</span>
+	     &nbsp;&nbsp;
+	     
+	     <a th:if="${currentPage <totalPages}" th:href="@{'/user/page/' + ${totalPages}}"> Last</a>
+	     <span th:unless="${currentPage <totalPages}"> Last</span>
+	     &nbsp;&nbsp;
+	   
+	   
+	     
+	     
+	    
+	</div>
+	<br/>
 	<div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
