--- a/ca_v1/src/main/resources/templates/editUser.html
+++ b/ca_v1/src/main/resources/templates/editUser.html
@@ -29,7 +29,8 @@
 			<p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
 		</fieldset>
 		<fieldset>
-			<input type="hidden" th:field="*{password}">
+			Password <input type="password" th:field="*{password}">
+			<p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
 		</fieldset>
 		<fieldset>
 			Role 
