--- a/ca_v1/src/main/resources/templates/userList.html
+++ b/ca_v1/src/main/resources/templates/userList.html
@@ -25,7 +25,7 @@
 		</tr>
 		<tr th:each="user:${users}">
 			<td th:text=${user.Id}>Id</td>
-			<td th:text=${user.name}>Name</td>
+			<td><a th:href="@{/user/showuser/}+${user.id}" th:text=${user.name}>Name</a></td>
 			<td th:text=${user.username}>Username</td>
 			<td th:text=${user.role}>Role</td>
 			<!-- 			<td><a href="EditFacility.html"
@@ -33,8 +33,12 @@
 			<td><a href="DeleteFacility.html"
 				th:href="@{/facility/delete/}+${facility.facilityId}">Delete</a></td> -->
 		</tr>
+		<tr>
+		<td colspan=3></td>
+		<td><a th:href="@{/user/add}"><button>Add New User</button></a></td>
+		</tr>
 	</table>
-
+	
 	<div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
