--- a/ca_v1/src/main/resources/templates/index.html
+++ b/ca_v1/src/main/resources/templates/index.html
@@ -4,9 +4,14 @@
 <meta charset="ISO-8859-1">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<title>index page</title>
+<link rel="stylesheet" href="../static/css/site.css">
+<title>Index Page</title>
 </head>
 <body>
- 	<h1>index</h1>
+
+	<header th:insert="layout/layout.html :: header"></header>
+	<div th:replace="layout/layout.html :: menu"></div>
+	
+	<div th:replace="layout/layout.html :: footer"></div>
 </body>
 </html>
