fixed update on supplier and user and add+update stockusageinventory record

--- a/ca_v1/src/main/resources/templates/addUser.html
+++ b/ca_v1/src/main/resources/templates/addUser.html
@@ -47,6 +47,15 @@
 		</fieldset>
 	</form>
 
+
+	<table>
+			<tr>
+			<td>
+				<a th:href="@{/catalogue/customers}"><button>Return to Customer List</button></a>
+			</td>
+		</tr>
+	</table>
+	
 	<div th:replace="layout/loglayout.html :: footer"></div>
 </body>
 </html>
