--- a/ca_v1/src/main/resources/templates/customerlist.html
+++ b/ca_v1/src/main/resources/templates/customerlist.html
@@ -25,9 +25,11 @@
 				th:text=${customer.customerName}>Customer Name</a></td>
 			<td th:text=${customer.carId}>Car Id</td>
 		</tr>
-		<tr>
-			<td></td>
-			<td colspan=2>
+	</table>
+	
+	<table>
+			<tr>
+			<td>
 				<a th:href="@{/user/landing}"><button>Return to Main</button></a> 
 				<a th:href="@{/catalogue/addcustomer}"><button>Add New User</button></a>
 			</td>
