--- a/ca_v1/src/main/resources/templates/landing.html
+++ b/ca_v1/src/main/resources/templates/landing.html
@@ -22,7 +22,7 @@
 	<td><a th:href="@{/catalogue/list}"><button>Catalogue</button></a></td>
 	<td><a th:href="@{/catalogue/customers}"><button>Customers</button></a></td>
 	<td><a th:href="@{/supplier/list}"><button>Suppliers</button></a></td>
-	<td th:if="${session.usession.role} == 0"><a th:href="@{/user/list}"><button>Users</button></a></td>
+	<td><a th:href="@{/user/list}"><button>Users</button></a></td>
 <!-- 	<td><a th:href="@{/catalogue/list}"><button>Suppliers</button></a></td> -->
 </tr>
 
