--- a/ca_v1/src/main/resources/templates/layout/loglayout.html
+++ b/ca_v1/src/main/resources/templates/layout/loglayout.html
@@ -33,8 +33,8 @@
 					<li><a href="#">Page 2</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>
-							Login</a></li>
+					<li><a href="/user/logout"><span class="glyphicon glyphicon-log-in"></span>
+							Logout</a></li>
 				</ul>
 			</div>
 		</nav>
