--- a/ca_v1/src/main/resources/templates/customerusage.html
+++ b/ca_v1/src/main/resources/templates/customerusage.html
@@ -24,7 +24,7 @@
 			<td> Customer CarId<span th:text="${customer.carId}"> </span></td>
 		</tr>
 			<tr>
-			<td><a th:href="@{/editcustomer/}+${customer.id}">
+			<td><a th:href="@{/catalogue/editcustomer/}+${customer.id}">
 				<button>Edit Customer</button></a>
 			</td>
 			</tr>
