--- a/ca_v1/src/main/resources/templates/landing.html
+++ b/ca_v1/src/main/resources/templates/landing.html
@@ -21,6 +21,7 @@
 <tr>
 	<td><a th:href="@{/catalogue/list}"><button>Catalogue</button></a></td>
 	<td><a th:href="@{/catalogue/customers}"><button>Customers</button></a></td>
+	<td><a th:href="@{/catalogue/listrecord}"><button>Stock Usage List</button></a></td>
 	<td><a th:href="@{/supplier/list}"><button>Suppliers</button></a></td>
 	<td><a th:href="@{/user/list}"><button>Users</button></a></td>
 <!-- 	<td><a th:href="@{/catalogue/list}"><button>Suppliers</button></a></td> -->
