--- a/ca_v1/src/main/resources/templates/layout/loglayout.html
+++ b/ca_v1/src/main/resources/templates/layout/loglayout.html
@@ -22,7 +22,8 @@
 					<a class="navbar-brand" href="#">Team 9</a>
 				</div>
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
+					<li th:class="${active}" class="active"><a href="#">Home</a></li>
+
 <!-- 					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
 						<ul class="dropdown-menu">
