--- a/ca_v1/src/main/resources/templates/supplierlist.html
+++ b/ca_v1/src/main/resources/templates/supplierlist.html
@@ -17,12 +17,24 @@
 <div>
 	<table th:if="${not #lists.isEmpty(supplierlist)}">
 		<tr>
-   <th>Id</th>
-   <th>Name</th>
-   <th>Address</th>
-   <th>Email</th>
-   <th>Phone</th>
+   <th>
+   <a th:href="@{'/supplier/page/' +${currentPage} + '?sortField=id&sortDir=' +${reverseSortDir}}">
+   Id</a></th>
+   <th>
+   <a th:href="@{'/supplier/page/' +${currentPage} + '?sortField=name&sortDir=' +${reverseSortDir}}">
+   Name</a></th>
+   <th>
+   <a
+   th:href="@{'/supplier/page/' +${currentPage} + '?sortField=address&sortDir=' +${reverseSortDir}}">
+   Address</a></th>
+   <th>
+   <a th:href="@{'/supplier/page/' +${currentPage} + '?sortField=email&sortDir=' +${reverseSortDir}}">
+   Email</a></th>
+   <th>
+   <a th:href="@{'/supplier/page/' +${currentPage} + '?sortField=phoneNumber&sortDir=' +${reverseSortDir}}">
+   Phone</a></th>
  </tr>
+ 
  <tr th:each="supplier:${supplierlist}">
    <td th:text="${supplier.id}">Id</td> 
    <td><a th:href="@{/supplier/detail/}+${supplier.id}" th:text="${supplier.name}">Name</a></td>
@@ -45,25 +57,25 @@
 	     Total Items:[[${total}]] - Page[[${currentPage}]] of [[${totalPages}]]
 	     &nbsp; -&nbsp;
 	     
-	     <a th:if="${currentPage >1}" th:href="@{/supplier/page/1}"> First</a>
+	     <a th:if="${currentPage >1}" th:href="@{'/supplier/page/1?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> First</a>
 	     <span th:unless="${currentPage >1}"> First</span>
 	     &nbsp;&nbsp;
 	     
-	     <a th:if="${currentPage >1}" th:href="@{'/supplier/page/' + ${currentPage - 1}}"> Previous</a>
+	     <a th:if="${currentPage >1}" th:href="@{'/supplier/page/' + ${currentPage - 1}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> Previous</a>
 	     <span th:unless="${currentPage >1}"> Previous</span>
 	     &nbsp;&nbsp;
 	     
 	     <span th:each="i: ${#numbers.sequence(1,totalPages)}">
-	       <a th:if="${i != currentPage}" th:href="@{'/supplier/page/'} + ${i}">[[${i}]]</a> 
+	       <a th:if="${i != currentPage}" th:href="@{'/supplier/page/'} + ${i}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}">[[${i}]]</a> 
 	       <span th:unless="${i != currentPage}" >[[${i}]]</span> 
 	       &nbsp;&nbsp;
 	     </span>
 	     
-	     <a th:if="${currentPage <totalPages}" th:href="@{'/supplier/page/' + ${currentPage + 1}}"> Next</a>
+	     <a th:if="${currentPage <totalPages}" th:href="@{'/supplier/page/' + ${currentPage + 1}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> Next</a>
 	     <span th:unless="${currentPage <totalPages}"> Next</span>
 	     &nbsp;&nbsp;
 	     
-	     <a th:if="${currentPage <totalPages}" th:href="@{'/supplier/page/' + ${totalPages}}"> Last</a>
+	     <a th:if="${currentPage <totalPages}" th:href="@{'/supplier/page/' + ${totalPages}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> Last</a>
 	     <span th:unless="${currentPage <totalPages}"> Last</span>
 	     &nbsp;&nbsp;
 	   
