--- a/ca_v1/src/main/resources/templates/users.html
+++ b/ca_v1/src/main/resources/templates/users.html
@@ -17,12 +17,28 @@
 
 	<h2 th:if="${not #lists.isEmpty(users)}">User List</h2>
 	<div>
+	
+		
 	<table th:if="${not #lists.isEmpty(users)}">
 		<tr >
-			<th >ID</th>
-			<th >Name</th>
-			<th >User Name</th>
-			<th >Role</th>
+			<th >
+			<a th:href="@{'/user/page/' +${currentPage} + '?sortField=id&sortDir=' +${reverseSortDir}}">
+			ID</a></th>
+			<th ><a th:href="@{'/user/page/' +${currentPage} + '?sortField=name&sortDir=' +${reverseSortDir}}">
+			Name</a></th>
+			<th ><a th:href="@{'/user/page/' +${currentPage} + '?sortField=username&sortDir=' +${reverseSortDir}}">
+			User Name</a></th>
+		    <th ><a th:href="@{'/user/page/' +${currentPage} + '?sortField=role&sortDir=' +${reverseSortDir}}">
+		    Role</a></th>
+			
+			
+			
+			
+			
+			
+			
+			
+			
 
 
 		</tr>
@@ -45,25 +61,25 @@
 	     Total Items:[[${total}]] - Page[[${currentPage}]] of [[${totalPages}]]
 	     &nbsp; -&nbsp;
 	     
-	     <a th:if="${currentPage >1}" th:href="@{/user/page/1}"> First</a>
+	     <a th:if="${currentPage >1}" th:href="@{'/user/page/1?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> First</a>
 	     <span th:unless="${currentPage >1}"> First</span>
 	     &nbsp;&nbsp;
 	     
-	     <a th:if="${currentPage >1}" th:href="@{'/user/page/' + ${currentPage - 1}}"> Previous</a>
+	     <a th:if="${currentPage >1}" th:href="@{'/user/page/' + ${currentPage - 1}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> Previous</a>
 	     <span th:unless="${currentPage >1}"> Previous</span>
 	     &nbsp;&nbsp;
 	     
 	     <span th:each="i: ${#numbers.sequence(1,totalPages)}">
-	       <a th:if="${i != currentPage}" th:href="@{'/user/page/'} + ${i}">[[${i}]]</a> 
+	       <a th:if="${i != currentPage}" th:href="@{'/user/page/' + ${i}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}}">[[${i}]]</a> 
 	       <span th:unless="${i != currentPage}" >[[${i}]]</span> 
 	       &nbsp;&nbsp;
 	     </span>
 	     
-	     <a th:if="${currentPage <totalPages}" th:href="@{'/user/page/' + ${currentPage + 1}}"> Next</a>
+	     <a th:if="${currentPage <totalPages}" th:href="@{'/user/page/' + ${currentPage + 1}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> Next</a>
 	     <span th:unless="${currentPage <totalPages}"> Next</span>
 	     &nbsp;&nbsp;
 	     
-	     <a th:if="${currentPage <totalPages}" th:href="@{'/user/page/' + ${totalPages}}"> Last</a>
+	     <a th:if="${currentPage <totalPages}" th:href="@{'/user/page/' + ${totalPages}+ '?sortField='+${sortField}+'&sortDir=' +${sortDir}}"> Last</a>
 	     <span th:unless="${currentPage <totalPages}"> Last</span>
 	     &nbsp;&nbsp;
 	   
